--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,9 +20,9 @@ body {
   background-color: #ffffff;
   /* width: 1200px; */
   box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
-  padding: 90px 110px;
-  padding-left: 50px;
-  padding-bottom: 180px;
+  padding: 90px 80px;
+  padding-left: 40px;
+  padding-bottom: 150px;
 }
 
 /* about styles */
@@ -218,15 +218,15 @@ body {
   /* margin-top: 50px; */
 }
 
-.contacts,
+/* .contacts,
 .tech_skills,
 .soft_skills {
   margin-left: 40px;
-}
+} */
 
-.contacts {
+/* .contacts {
   margin-bottom: 30px;
-}
+} */
 
 
 .sidebar_title {
@@ -236,12 +236,12 @@ body {
   font-size: 32px;
   line-height: 27px;
   margin-bottom: 24px;
-  margin-top: 60px;
+  /* margin-top: 60px; */
 }
 
-.contacts-contact {
+/* .contacts-contact {
   margin-top: 20px;
-}
+} */
 
 .contact_type {
   color: #fb6e3a;
@@ -295,7 +295,7 @@ body {
 .skills_title {
   color:#000000;
   margin-left: 0;
-  margin-right: -69px;
+  margin-right: -130px;
 }
 
 .wrapper-skills{
@@ -312,4 +312,12 @@ body {
   padding-left: 10px;
   display: flex;
   column-gap: 20px
+}
+
+.sliderbar-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  height: 1000px;
+  align-content: space-between;
+  margin-left: 60px;
 }
