--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,9 +107,18 @@ body {
 .project_link {
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 24px;
   line-height: 1.71;
   color: #595959;
+}
+
+.project {
+  display: flex;
+  justify-content: space-between;
+}
+
+.project-name {
+  margin: 0;
 }
 
 .projects_link {
